--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -6,4 +6,71 @@
     android:layout_height="match_parent"
     tools:context=".view.SignUp.SignUpActivity">
 
+    <TextView
+        android:id="@+id/textSignupSelectOr"
+        android:layout_width="180dp"
+        android:layout_height="60dp"
+        android:text="Or..."
+        android:textAlignment="center"
+        android:textSize="34sp"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnSignupSelectEmployee"
+        app:layout_constraintVertical_bias="0.23" />
+
+    <Button
+        android:id="@+id/btnSignupSelectEmployer"
+        android:layout_width="255dp"
+        android:layout_height="96dp"
+        android:layout_marginBottom="136dp"
+        android:text="Employer"
+        android:textSize="34sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textSignupSelectOr"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/btnSignupSelectEmployee"
+        android:layout_width="255dp"
+        android:layout_height="96dp"
+        android:text="Employee"
+        android:textSize="34sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textSignupSelectAccountType"
+        app:layout_constraintVertical_bias="0.229" />
+
+    <TextView
+        android:id="@+id/textSignupSelectAccountType"
+        android:layout_width="336dp"
+        android:layout_height="48dp"
+        android:text="Select Account Type"
+        android:textAlignment="center"
+        android:textSize="34sp"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.067" />
+
+    <TextView
+        android:id="@+id/textSignupRegisterAs"
+        android:layout_width="301dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="109dp"
+        android:text="Register a new account as:"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/btnSignupSelectEmployee"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/textSignupSelectAccountType"
+        app:layout_constraintTop_toTopOf="@+id/textSignupSelectAccountType"
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
