--- a/app/src/main/res/layout/activity_sign_up_employee.xml
+++ b/app/src/main/res/layout/activity_sign_up_employee.xml
@@ -107,6 +107,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textPasswordHint" />
+        app:layout_constraintTop_toBottomOf="@+id/textPasswordHint"
+        app:layout_constraintVertical_bias="0.413" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
