changed xml ids

--- a/app/src/main/res/layout/activity_login_employee.xml
+++ b/app/src/main/res/layout/activity_login_employee.xml
@@ -66,7 +66,7 @@
         app:layout_constraintVertical_bias="0.529" />
 
     <Button
-        android:id="@+id/btnLoginEmployee1"
+        android:id="@+id/btnLoginEmployee"
         android:layout_width="233dp"
         android:layout_height="70dp"
         android:layout_marginStart="90dp"
