--- a/app/src/main/res/layout/activity_change_education_details.xml
+++ b/app/src/main/res/layout/activity_change_education_details.xml
@@ -24,13 +24,13 @@
         android:id="@+id/editTextChangeEducationDetailsDescription"
         android:layout_width="384dp"
         android:layout_height="108dp"
-        android:layout_marginStart="12dp"
         android:layout_marginBottom="128dp"
         android:ems="10"
         android:hint="Enter a description"
         android:inputType="text"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinnerChangeEducationDetailsSelectLevelOfStudies"
         app:layout_constraintVertical_bias="0.804" />
@@ -53,6 +53,7 @@
         android:id="@+id/btnChangeEducationDetailsSave"
         android:layout_width="133dp"
         android:layout_height="74dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:text="Save"
         android:textSize="24sp"
