--- a/app/src/main/res/layout/activity_add_new_education.xml
+++ b/app/src/main/res/layout/activity_add_new_education.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.ModifyCVEditEducation.AddNewEducation.AddNewEducationActivity">
+    tools:context=".view.ModifyCV.ModifyCVEditEducation.AddNewEducation.AddNewEducationActivity">
 
     <TextView
         android:id="@+id/textView41"
