--- a/app/src/main/res/layout/activity_change_education_details.xml
+++ b/app/src/main/res/layout/activity_change_education_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.ModifyCVEditEducation.ChangeEducationDetails.ChangeEducationDetailsActivity">
+    tools:context=".view.ModifyCV.ModifyCVEditEducation.ChangeEducationDetails.ChangeEducationDetailsActivity">
 
 
     <TextView
