--- a/app/src/main/res/layout/activity_login_employee.xml
+++ b/app/src/main/res/layout/activity_login_employee.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.LoginEmployee.LoginEmployeeActivity">
+    tools:context=".view.Login.LoginEmployee.LoginEmployeeActivity">
 
     <EditText
         android:id="@+id/editTextLoginEmployeePassword"
