--- a/app/src/main/res/layout/activity_login_employer.xml
+++ b/app/src/main/res/layout/activity_login_employer.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.LoginEmployer.LoginEmployerActivity">
+    tools:context=".view.Login.LoginEmployer.LoginEmployerActivity">
 
     <EditText
         android:id="@+id/editTextLoginEmployerPassword"
