--- a/app/src/main/res/layout/activity_modify_cv_edit_language_knowledge.xml
+++ b/app/src/main/res/layout/activity_modify_cv_edit_language_knowledge.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.ModifyCVEditLanguageKnowledge.ModifyCVEditLanguageKnowledgeActivity">
+    tools:context=".view.ModifyCV.ModifyCVEditLanguageKnowledge.ModifyCVEditLanguageKnowledgeActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
