--- a/app/src/main/res/layout/activity_modify_cv_edit_work_experience.xml
+++ b/app/src/main/res/layout/activity_modify_cv_edit_work_experience.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.ModifyCVEditWorkExperience.ModifyCVEditWorkExperienceActivity">
+    tools:context=".view.ModifyCV.ModifyCVEditWorkExperience.ModifyCVEditWorkExperienceActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
