--- a/app/src/main/res/layout/activity_show_job_details.xml
+++ b/app/src/main/res/layout/activity_show_job_details.xml
@@ -6,4 +6,195 @@
     android:layout_height="match_parent"
     tools:context=".view.SearchJobs.ShowJobDetails.ShowJobDetailsActivity">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="40dp"
+        tools:layout_editor_absoluteY="0dp">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:context=".view.SearchJobs.ShowJobDetails.ShowJobDetailsActivity">
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="295dp"
+                android:layout_height="43dp"
+                android:layout_marginTop="16dp"
+                android:text="Job Details"
+                android:textAlignment="center"
+                android:textSize="34sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="76dp"
+                android:layout_height="21dp"
+                android:layout_marginStart="8dp"
+                android:text="Job's Title: "
+                android:textStyle="italic"
+                app:layout_constraintBottom_toBottomOf="@+id/textShowJobDetailsTitle"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/textShowJobDetailsTitle"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <TextView
+                android:id="@+id/textShowJobDetailsTitle"
+                android:layout_width="294dp"
+                android:layout_height="51dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="16dp"
+                android:text="Job Title"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView9" />
+
+            <TextView
+                android:id="@+id/textView12"
+                android:layout_width="76dp"
+                android:layout_height="42dp"
+                android:text="Job's Description:"
+                android:textStyle="italic"
+                app:layout_constraintStart_toStartOf="@+id/textView10"
+                app:layout_constraintTop_toTopOf="@+id/textShowJobDetailsDescription" />
+
+            <TextView
+                android:id="@+id/textShowJobDetailsDescription"
+                android:layout_width="294dp"
+                android:layout_height="194dp"
+                android:layout_marginTop="36dp"
+                android:text="Job Description"
+                app:layout_constraintEnd_toEndOf="@+id/textShowJobDetailsTitle"
+                app:layout_constraintTop_toBottomOf="@+id/textShowJobDetailsTitle" />
+
+            <TextView
+                android:id="@+id/textView14"
+                android:layout_width="136dp"
+                android:layout_height="21dp"
+                android:layout_marginTop="24dp"
+                android:text="Availability Status:"
+                android:textAllCaps="false"
+                android:textStyle="italic"
+                app:layout_constraintStart_toStartOf="@+id/textView12"
+                app:layout_constraintTop_toBottomOf="@+id/textShowJobDetailsDescription" />
+
+            <TextView
+                android:id="@+id/textShowJobDetailsAvailability"
+                android:layout_width="228dp"
+                android:layout_height="25dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="16dp"
+                android:text="Job Availability"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textShowJobDetailsDescription" />
+
+            <TextView
+                android:id="@+id/textView16"
+                android:layout_width="334dp"
+                android:layout_height="64dp"
+                android:layout_marginTop="88dp"
+                android:text="Job Requirements"
+                android:textAlignment="center"
+                android:textSize="34sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.493"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textShowJobDetailsAvailability" />
+
+            <TextView
+                android:id="@+id/textView23"
+                android:layout_width="288dp"
+                android:layout_height="53dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="44dp"
+                android:text="Required Education:"
+                android:textSize="24sp"
+                android:textStyle="italic"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView16" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewShowJobDetailsRequiredEducation"
+                android:layout_width="318dp"
+                android:layout_height="316dp"
+                android:layout_marginTop="28dp"
+                app:layout_constraintStart_toStartOf="@+id/textView23"
+                app:layout_constraintTop_toBottomOf="@+id/textView23" />
+
+            <TextView
+                android:id="@+id/textView24"
+                android:layout_width="296dp"
+                android:layout_height="56dp"
+                android:layout_marginTop="40dp"
+                android:text="Required Work Experience:"
+                android:textSize="24sp"
+                android:textStyle="italic"
+                app:layout_constraintStart_toStartOf="@+id/recyclerViewShowJobDetailsRequiredEducation"
+                app:layout_constraintTop_toBottomOf="@+id/recyclerViewShowJobDetailsRequiredEducation" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewShowJobDetailsRequiredWorkExp"
+                android:layout_width="318dp"
+                android:layout_height="303dp"
+                android:layout_marginTop="36dp"
+                app:layout_constraintStart_toStartOf="@+id/textView24"
+                app:layout_constraintTop_toBottomOf="@+id/textView24" />
+
+            <TextView
+                android:id="@+id/textView25"
+                android:layout_width="290dp"
+                android:layout_height="65dp"
+                android:layout_marginTop="44dp"
+                android:text="Required Language Knowledge:"
+                android:textSize="24sp"
+                android:textStyle="italic"
+                app:layout_constraintStart_toStartOf="@+id/recyclerViewShowJobDetailsRequiredWorkExp"
+                app:layout_constraintTop_toBottomOf="@+id/recyclerViewShowJobDetailsRequiredWorkExp" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewShowJobDetailsReqLangKnowledge"
+                android:layout_width="317dp"
+                android:layout_height="321dp"
+                android:layout_marginTop="40dp"
+                app:layout_constraintStart_toStartOf="@+id/textView25"
+                app:layout_constraintTop_toBottomOf="@+id/textView25" />
+
+            <Button
+                android:id="@+id/btnShowJobDetailsSendApplication"
+                android:layout_width="295dp"
+                android:layout_height="74dp"
+                android:layout_marginTop="104dp"
+                android:text="Send Application"
+                android:textSize="28sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="@+id/editTextShowJobDetailsCoverLetter"
+                app:layout_constraintStart_toStartOf="@+id/editTextShowJobDetailsCoverLetter"
+                app:layout_constraintTop_toBottomOf="@+id/editTextShowJobDetailsCoverLetter" />
+
+            <TextView
+                android:id="@+id/textView26"
+                android:layout_width="336dp"
+                android:layout_height="68dp"
+                android:layout_marginTop="60dp"
+                android:text="Before applying for a job, you must provide a cover letter to distinguise yourself from the rest of the applicants."
+                android:textStyle="italic"
+                app:layout_constraintStart_toStartOf="@+id/recyclerViewShowJobDetailsReqLangKnowledge"
+                app:layout_constraintTop_toBottomOf="@+id/recyclerViewShowJobDetailsReqLangKnowledge" />
+
+            <EditText
+                android:id="@+id/editTextShowJobDetailsCoverLetter"
+                android:layout_width="373dp"
+                android:layout_height="83dp"
+                android:layout_marginTop="60dp"
+                android:ems="10"
+                android:hint="Write your cover letter here"
+                android:inputType="text"
+                app:layout_constraintStart_toStartOf="@+id/textView26"
+                app:layout_constraintTop_toBottomOf="@+id/textView26" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
