--- a/app/src/main/res/layout/recycler_view_education_row.xml
+++ b/app/src/main/res/layout/recycler_view_education_row.xml
@@ -19,12 +19,15 @@
 
             <TextView
                 android:id="@+id/textEducationDescription"
-                android:layout_width="374dp"
-                android:layout_height="58dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginBottom="16dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginBottom="56dp"
                 android:text="EducationDescription"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
