--- a/app/src/main/res/layout/recycler_view_search_jobs_row.xml
+++ b/app/src/main/res/layout/recycler_view_search_jobs_row.xml
@@ -41,12 +41,15 @@
 
             <TextView
                 android:id="@+id/textJobDescription"
-                android:layout_width="396dp"
-                android:layout_height="51dp"
-                android:layout_marginStart="4dp"
-                android:layout_marginBottom="16dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="25dp"
+                android:layout_marginEnd="25dp"
+                android:layout_marginBottom="48dp"
                 android:text="Job Description"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
