--- a/app/src/main/res/layout/recycler_view_work_experience_row.xml
+++ b/app/src/main/res/layout/recycler_view_work_experience_row.xml
@@ -20,12 +20,15 @@
 
             <TextView
                 android:id="@+id/textWorkExperienceDescription"
-                android:layout_width="384dp"
-                android:layout_height="71dp"
-                android:layout_marginStart="12dp"
-                android:layout_marginBottom="24dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="25dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="72dp"
                 android:text="WorkExperienceDescription"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
