--- a/app/src/main/res/layout/activity_manage_job_positions.xml
+++ b/app/src/main/res/layout/activity_manage_job_positions.xml
@@ -1,6 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewManageJobPositions"
+        android:layout_width="400dp"
+        android:layout_height="469dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.6"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView13" />
+
+    <Button
+        android:id="@+id/btnManageJobPositionsAddJob"
+        android:layout_width="180dp"
+        android:layout_height="61dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="164dp"
+        android:text="Add New Job"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/textView11"
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="309dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="16dp"
+        android:text="Job Positions Overview"
+        android:textAlignment="center"
+        android:textSize="34sp"
+        android:textStyle="bold|italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView13"
+        android:layout_width="285dp"
+        android:layout_height="26dp"
+        android:layout_marginTop="12dp"
+        android:text="Click on any job to see more details"
+        android:textStyle="italic"
+        app:layout_constraintStart_toStartOf="@+id/btnManageJobPositionsAddJob"
+        app:layout_constraintTop_toBottomOf="@+id/btnManageJobPositionsAddJob" />
 </androidx.constraintlayout.widget.ConstraintLayout>
