--- a/app/src/main/res/layout/recycler_view_jobs_row.xml
+++ b/app/src/main/res/layout/recycler_view_jobs_row.xml
@@ -19,8 +19,8 @@
 
             <TextView
                 android:id="@+id/textJobTitle"
-                android:layout_width="210dp"
-                android:layout_height="35dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:text="Job Title"
@@ -30,8 +30,8 @@
 
             <TextView
                 android:id="@+id/textJobAvailability"
-                android:layout_width="165dp"
-                android:layout_height="26dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:text="Job Availability"
@@ -43,8 +43,8 @@
                 android:id="@+id/textJobDescription"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="25dp"
-                android:layout_marginEnd="25dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
                 android:layout_marginBottom="48dp"
                 android:text="Job Description"
                 app:layout_constraintBottom_toBottomOf="parent"
