--- a/app/src/main/res/layout/activity_manage_job_positions.xml
+++ b/app/src/main/res/layout/activity_manage_job_positions.xml
@@ -20,12 +20,15 @@
         android:id="@+id/btnManageJobPositionsAddJob"
         android:layout_width="180dp"
         android:layout_height="61dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="164dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="8dp"
         android:text="Add New Job"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/textView11"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <TextView
@@ -46,7 +49,8 @@
         android:id="@+id/textView13"
         android:layout_width="285dp"
         android:layout_height="26dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="16dp"
         android:text="Click on any job to see more details"
         android:textStyle="italic"
         app:layout_constraintStart_toStartOf="@+id/btnManageJobPositionsAddJob"
