--- a/app/src/main/res/layout/recycler_view_education_row.xml
+++ b/app/src/main/res/layout/recycler_view_education_row.xml
@@ -22,13 +22,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="24dp"
-                android:layout_marginBottom="56dp"
+                android:layout_marginBottom="8dp"
                 android:text="EducationDescription"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textEducationExpField"
+                app:layout_constraintVertical_bias="0.0" />
 
             <TextView
                 android:id="@+id/textEducationExpField"
