--- a/app/src/main/res/layout/recycler_view_language_knowledge_row.xml
+++ b/app/src/main/res/layout/recycler_view_language_knowledge_row.xml
@@ -32,13 +32,16 @@
                 android:layout_width="360dp"
                 android:layout_height="23dp"
                 android:layout_marginStart="24dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="24dp"
-                android:layout_marginBottom="48dp"
+                android:layout_marginBottom="8dp"
                 android:text="Descreption"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textLanguageKnowledgeLanguuage"
+                app:layout_constraintVertical_bias="0.166" />
 
             <TextView
                 android:id="@+id/textLanguageKnowledgeLevel"
