--- a/app/src/main/res/layout/activity_modify_cv_edit_work_experience.xml
+++ b/app/src/main/res/layout/activity_modify_cv_edit_work_experience.xml
@@ -6,4 +6,39 @@
     android:layout_height="match_parent"
     tools:context=".view.ModifyCV.ModifyCVEditWorkExperience.ModifyCVEditWorkExperienceActivity">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewModifyCVEditWorkExperience"
+        android:layout_width="353dp"
+        android:layout_height="547dp"
+        tools:layout_editor_absoluteX="27dp"
+        tools:layout_editor_absoluteY="168dp" />
+
+    <TextView
+        android:id="@+id/textView18"
+        android:layout_width="362dp"
+        android:layout_height="79dp"
+        android:text="Edit Your Work Experience"
+        android:textAlignment="center"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="28dp"
+        tools:layout_editor_absoluteY="13dp" />
+
+    <TextView
+        android:id="@+id/textView28"
+        android:layout_width="202dp"
+        android:layout_height="29dp"
+        android:text="Click on any item to change it"
+        tools:layout_editor_absoluteX="27dp"
+        tools:layout_editor_absoluteY="120dp" />
+
+    <Button
+        android:id="@+id/btnModifyCVEditWorkExperienceAddNew"
+        android:layout_width="153dp"
+        android:layout_height="61dp"
+        android:text="ADD NEW"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="237dp"
+        tools:layout_editor_absoluteY="99dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
